src/firewall-egress.tf
resource "google_compute_firewall" "o03-ni-gcp" {
  name = "devsecops-fw-single-ip-egress"
  network = "devsecops-network-gcp"

  allow {
    protocol = "udp"
  }

  direction = "EGRESS"
  priority = "2400"
  destination_ranges = [
    "192.168.1.1/32"]
}
